--- a/photography/photography.html
+++ b/photography/photography.html
@@ -5,7 +5,7 @@
 		<title>Photography</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="main.css">
+		<link rel="stylesheet" href="../main.css">
 	</head>
 
 	<body>
@@ -15,22 +15,46 @@
 			
 			<nav>
 				<div class="navLeft">
-				<a href="index.html" class="navName">Jeffery Li</a>
+				<a href="../index.html" class="navName">Jeffery Li</a>
 				</div>
 					
 				<div class="navRight">
-				<a href="uiux/uiuxwork.html" class="navLink">UI/UX</a>
-				<a href="graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
+				<a href="../uiux/uiuxwork.html" class="navLink">UI/UX</a>
+				<a href="../graphicdesign/graphicdesign.html" class="navLink">Graphic Design</a>
 				<a href="" class="navLink">Photography</a>
-				<a href="about.html" class="navLink">About</a>
+				<a href="../about.html" class="navLink">About</a>
 				</div>
 			</nav>
 
 			<!-- Title -->
 
-			<h1 class="portfolioTitle">Photography</h1>
-			<p class="work-description">If you don't see me sitting behind the computer designing, I'll be around the city shooting the streets.</p>
+			<h1 class="photoTitle">Photography</h1>
+			<p class="photo-desc">If you don't see me sitting behind the computer designing, I'll be behind a camera shooting the streets of Toronto.</p>
 
+			<!-- Photography -->
+
+			<div class="row">
+				<div class="photocontainer ">
+					<a class="photoPicContainer" href="#"><img class="fullwidth" src="../images/photography/urban.jpg"></a>
+					<p class="hovertext">Urban &amp; Street</p>
+					<p class="hoversubtext">A collection of photos from Toronto, New York City, and San Francisco</p>
+				</div>
+				<div class="photocontainer ">
+					<a class="photoPicContainer" href="#"><img class="fullwidth" src="../images/photography/explore.jpg"></a>
+					<p class="hovertext">Explore</p>
+					<p class="hoversubtext">Views from high altitudes above the city</p>
+				</div>
+				<div class="photocontainer ">
+					<a class="photoPicContainer" href="#"><img class="fullwidth" src="../images/photography/nature.jpg"></a>
+					<p class="hovertext">Nature</p>
+					<p class="hoversubtext">Getting away from the city</p>
+				</div>
+				<div class="photocontainer ">
+					<a class="photoPicContainer" href="#"><img class="fullwidth" src="../images/photography/portraits2.jpg"></a>
+					<p class="hovertext">Portraits</p>
+					<p class="hoversubtext">Friends, family, and models</p>
+				</div>
+			</div>
 
 		</div>
 	</body>
